# wolf-gang

./: .gitignore  .travis.yml  ActorPalette.gdns  Cargo.toml  Cone.mesh  ConnectDialog.gdns  ConnectMenu.gdns  EditMenu.gdns  Editor.tscn  EditorUI.tscn  FileConfirmation.gdns  FileMenu.gdns  Main.tscn  Palette.gdns  README.md  SaveLoadDialog.gdns  ToolList.gdns  WolfGang.gdns  cone.glb  default_env.tres  export_presets.cfg  project.godot  rust-toolchain  select_box.material  travis.yml  ui.tscn  wolf_gang.gdnlib  wolf_gang.gdns
characters/: lucas.tscn
config/: actor_paths.ron  actors.ron  characters.ron  input_map.ron
lobby/: Cargo.toml
lobby-server/: Cargo.toml  Dockerfile
lobby-server/lobby/: Cargo.toml
lobby-server/lobby/src/: lib.rs
lobby-server/src/: main.rs
materials/: ground.material  select_box.material
models/: alpinetree.blend  alpinetree.escn  lucas.blend  lucas.escn  readme.md  test.glb
wolf_gang/: Cargo.toml
wolf_gang/src/: actor.rs  custom_mesh.rs  editor.rs  game_state.rs  history.rs  level_map.rs  lib.rs  networking.rs  node.rs  selection_box.rs
wolf_gang/src/actors/: actor.rs  mod.rs
wolf_gang/src/collections/: mod.rs  octree.rs
wolf_gang/src/geometry/: aabb.rs
wolf_gang/src/nodes/: actor_palette.rs  connect_menu.rs  connet_dialog.rs  edit_menu.rs  file_confirmation.rs  file_dialog.rs  file_menu.rs  mod.rs  palette.rs  tool_list.rs  utils.rs
wolf_gang/src/systems/: actor.rs  camera.rs  character_animator.rs  custom_mesh.rs  history.rs  input.rs  level_map.rs  mod.rs  networking.rs  scene.rs  selection_box.rs  smoothing.rs  udp.rs
wolf_gang/src/systems/actor/: mod.rs
wolf_gang/src/systems/level_map/: document.rs  history.rs  mesh.rs  mod.rs
wolf_gang/src/systems/transform/: mod.rs  position.rs  rotation.rs
wolf_gang/src/tests/: aabb.rs  input.rs  mod.rs  octree.rs  world.rs
