[package]
name = "wolf_gang"
version = "0.1.0"
authors = ["lyon <lyonbeckers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.8.1"
# legion =  { git = "file:/Users/lyon/RustProjects/legion", branch="experimental" } 
legion = { git = "https://github.com/TomGillen/legion.git", commit="24091d7" }
nalgebra = { version = "0.21.0", features = ["serde-serialize"] }
lazy_static = "1.4.0"
num = "0.2.1"
ron = "0.5.1"
serde = "1.0.106"
serde_derive = "1.0.106"
approx = "0.3.2"
laminar = "0.3.2"
bincode = "1.3.1"

[lib]
crate-type = ["cdylib"]