[package]
name = "wolf_gang"
version = "0.1.0"
authors = ["lyon <lyonbeckers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.0-preview.0"
legion = { git = "https://github.com/TomGillen/legion.git" }
libc = "0.2.74"
# legion = { git = "https://github.com/TomGillen/legion.git", rev= "91266c8" }
# legion = "0.2.4"
nalgebra = { version = "0.21.0", features = ["serde-serialize"] }
lazy_static = "1.4.0"
num = "0.2.1"
ron = "0.5.1"
serde = "1.0.106"
serde_derive = "1.0.106"
approx = "0.3.2"
bincode = "1.3.1"
rayon = "1.3.1"
cobalt = "0.22.0"
uuid = "0.8.1"
snap = "1"
lobby = { path = "../lobby-server/lobby" }
gip = "0.6.0"

[lib]
crate-type = ["cdylib"]