[package]
name = "wolf_gang"
version = "0.1.0"
authors = ["lyon <lyonbeckers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.1"
legion = "0.3.1"
# legion = { git = "https://github.com/TomGillen/legion.git" }
libc = "0.2.80"
nalgebra = { version = "0.23.0", features = ["serde-serialize"] }
lazy_static = "1.4.0"
num = "0.3.0"
ron = "0.6.2"
serde = "1.0.117"
serde_derive = "1.0.117"
approx = "0.4.0"
bincode = "1.3.1"
rayon = "1.5.0"
cobalt = "0.22.0"
uuid = { version = "0.8.1", features= ["v4"] }
snap = "1"
lobby = { path = "../lobby-server/lobby" }
gip = "0.6.0"

[lib]
crate-type = ["cdylib"]